--- a/tallerwebi-base/src/main/webapp/resources/core/css/main.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/main.css
@@ -1,5 +1,6 @@
 body {
   padding-top: 5rem;
+  background-color: red;
 }
 .starter-template {
   padding: 3rem 1.5rem;
@@ -17,3 +18,4 @@ h2{
 .navbar-brand{
     margin:0 2rem;
 }
+
