--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -36,8 +36,9 @@
 
 
         <h2 th:text= "${usuario.nombre}"></h2>
+        <h2 th:text= "${usuario.apellido}"></h2>
         <ul>
-            <li th:each="carrera : ${usuario.carreras}" th:text="${carrera.nombre}">Carrera</li>
+            <li th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
         </ul>
 
     </div>
