--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -27,7 +27,7 @@
 
         <h2 th:text= "${usuario.nombre}"></h2>
         <ul>
-            <li th:each="carrera : ${usuario.carreras}" th:text="${carrera.nombre}">Carrera</li>
+            <li th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
         </ul>
 
     </div>
