--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -6,60 +6,60 @@
 
   <title>Taller Web I</title>
 
-  <!-- Boostrap core css -->
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-
-  <!-- custom style -->
-  <link rel="stylesheet" th:href="@{/css/main.css}"/>
+    <link rel="stylesheet" href="../../../resources/core/css/registrarse.css">
 
 </head>
 
 <body>
 
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
 
-<main role="main" class="container">
+<main role="main" class="mainformularioRegistrarse">
+<div class="contendor-info-registrarse">
+<!--    <p>Comunidad estudiantil de la Universidad Nacional de La Matanza</p>-->
+</div>
 
-  <div class = "container">
-    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div id="loginbox"  class="contenedor-form">
         <form action="#" th:action="@{/registrarme}" method="POST" th:object="${usuario}" accept-charset="UTF-8">
-        <h3 class="form-signin-heading">Nuevo Usuario</h3>
-        <hr class="colorgraph"><br>
-          <div>
+
+
+
+            <div class="form-group">
               <label for="nombre" >Nombre</label>
-              <input th:field="*{nombre}" id="nombre" class="form-control" required/>
+              <input th:field="*{nombre}" id="nombre"  type="text" required/>
           </div>
-          <div>
+
+            <div class="form-group">
               <label for="apellido" >Apellido</label>
-              <input th:field="*{apellido}" id="apellido" class="form-control" required/>
+              <input th:field="*{apellido}" id="apellido" type="text" required/>
           </div>
-            <div>
+
+            <div class="form-group">
                 <label>Carreras (máx. 2)</label>
-                <div th:each="carrera : ${todasLasCarreras}">
+                <div th:each="carrera : ${todasLasCarreras}" class="checkbox-group">
                     <input type="checkbox"
                            th:value="${carrera.nombre}"
                            th:field="*{carrerasNombres}" />
                     <span th:text="${carrera.nombre}"></span>
                 </div>
             </div>
-          <div>
+
+            <div class="form-group">
         <label for="email" >Email</label>
-        <input th:field="*{email}" id="email" class="form-control" required/>
-          </div>
-          <div>
-              <label for="password">Contraseña</label>
-        <input th:field="*{password}" type="password" id="password" class="form-control" required/>
+        <input th:field="*{email}" id="email" type="text" required/>
           </div>
 
-        <button id="btn-registrarme" class="btn btn-lg btn-primary btn-block" Type="Submit">Registrarme</button>
+            <div class="form-group">
+              <label for="password">Contraseña</label>
+        <input th:field="*{password}" type="password" id="password"  required/>
+          </div>
+
+        <button id="btn-registrarme" class="buttonRegistrarse" Type="Submit">Registrarme</button>
         <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
         </p>
       </form>
 
     </div>
-  </div>
+
 
 </main>
 <!-- /.container -->
