anda registrarse (falta agregar que se puedan registrar cn mails de la uni)

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -32,6 +32,10 @@
               <label for="apellido" >Apellido</label>
               <input th:field="*{apellido}" id="apellido" type="text" required/>
           </div>
+            <div class="form-group">
+                <label for="dni" >Dni</label>
+                <input th:field="*{dni}" id="dni" type="number" required/>
+            </div>
 
             <div class="form-group">
                 <label for="carrera">Carrera</label>
