--- a/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
@@ -35,6 +35,7 @@
 }
 
 .form-group input[type="text"],
+.form-group input[type="number"],
 .form-group input[type="email"],
 .form-group input[type="password"] {
   padding: 8px;
