--- a/tallerwebi-base/src/main/webapp/resources/core/css/home.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/home.css
@@ -98,7 +98,7 @@ body{
 
 .content {
     margin-top: 50px;
-    border:1px solid yellow;
+    /*border:1px solid yellow;*/
     border-radius: 5px;
     background-color: transparent;
     grid-row: row-content;
