Agregué th: al src para el logo.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -21,7 +21,7 @@
 <body>
 
 <nav>
-    <img class="logo" src="../../../resources/core/imagenes/logo.png">
+    <img class="logo" th:src="@{/resources/core/imagenes/logo.png}">
 </nav>
 
 <main role="main" class="contenedor">
