Agregué una configuración extra en  addResourceHandlers para que tome la carpeta de imagenes.

--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/nuevo-usuario.html
@@ -6,8 +6,7 @@
 
   <title>Registrarse</title>
 
-  <!--<link rel="stylesheet" th:href="@{/css/registrar.css}"/>-->
-    <link rel="stylesheet" th:href="@{/core/css/registrar.css}">
+    <link rel="stylesheet" th:href="@{/css/registrar.css}"/>
     <link rel="stylesheet" href="/src/main/webapp/resources/core/css/registrar.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +15,7 @@
 
 <body>
 <nav>
-    <img class="logo" th:src="@{/core/imagenes/logo.png}">
+    <img class="logo" th:src="@{/resources/core/imagenes/logo.png}">
     <!--<img class="logo" src="../../../resources/core/imagenes/logo.png">-->
 </nav>
 <main role="main" class="contenedor">
