--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -16,7 +16,7 @@
 
 <body>
 <nav>
-    <img class="logo" th:src="@{/resources/core/imagenes/logo.png}">
+    <img class="logo" th:src="@{/imagenes/logo.png}">
     <!--<img class="logo" src="../../../resources/core/imagenes/logo.png">-->
 </nav>
 <main role="main" class="contenedor">
