--- a/tallerwebi-base/src/main/webapp/resources/core/css/home.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/home.css
@@ -98,7 +98,7 @@ body{
 
 .content {
     margin-top: 50px;
-    border:1px solid yellow;
+
     border-radius: 5px;
     background-color: transparent;
     grid-row: row-content;
@@ -130,7 +130,6 @@ body{
 .container_publicar .contenedor_publi-botones {
     display: flex;
     flex: 1;
-
     width: 80%;
     align-self: center;
     justify-content: end;
@@ -153,14 +152,25 @@ body{
     border: none;
 
 }
-.container_publicar .contenedor_publi-botones button i {
-    font-size: 20px;
-    color:white;
-}
 
-.container_puicacionesUsuarios {
-   /* border:1px solid green;*/
-    min-height: 250px;
-    color: #DADADC;
-    background-color: #26262C;
+.ordernar-por_text {
+color:#DADADC}
+
+.botones_acciones {
+
+  display:flex;
+  justify-content: end;
+
+
+}
+.botones_acciones-b{
+
+display:flex;
+justify-content:center;
+align-items:center;
+margin: 5px;
+padding:5px;
+cursor:pointer;
+
+
 }
