--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -28,7 +28,7 @@
             <button id="btn-login" class="btn" Type="Submit" disabled>Ingresar</button>
             <a href="nuevo-usuario">Olvidaste la contraseña?</a>
             <div class="separador"></div>
-            <p th:if="${error != null}" class="error" th:text="'Error ' + ${error}">
+            <p th:if="${error != null}" th:text="'Error ' + ${error}" class="error" >
             </p>
         </form>
         <a class="btn" id="btn-register" href="nuevo-usuario">Registrarme</a>
