--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -3,60 +3,52 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Perfil</title>
 
-    <title>Taller Web I</title>
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <!-- Boostrap core css -->
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-
-    <!-- custom style -->
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
-
+    <!--<link rel="stylesheet" th:href="@{/css/perfil.css}"/>-->
+    <!--<link rel="stylesheet" th:href="@{/css/home.css}"/>-->
+    <link rel="stylesheet" href="../../../resources/core/css/perfil.css"/>
+    <link rel="stylesheet" href="../../../resources/core/css/home.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
-
 <body>
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
-<aside class="aside">
-
-    <div class="container_profile">
-        <i class="material-icons">account_circle</i>
-
-        <h2 th:text= "${usuario.nombre}"></h2>
-        <ul>
-            <li th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
-        </ul>
-
-    </div>
-
-    <div class="user_info" >
-        <p>blablaba</p>
-        <p>blablaba</p>
-        <p>blablaba</p>
-
-        <a href="#" class="ver_mas">Conocer más...</a>
-
-    </div>
-
-    <div class="user_info_items" >
-        <ul>
-
-            <li> <i class="material-icons">archive</i>Archivos</li>
-            <li> <i class="material-icons">group</i>Grupos</li>
-
-        </ul>
-
-
-    </div>
-
-</aside>
-<!-- /.container -->
-
-<!-- Boostrap core js -->
-<script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
+<header>
+    <nav class="navbar">
+        <!--<a href="#"><img class="isologo" th:src="@{/imagenes/isologo.png}"></a>-->
+        <a href="#"><img class="isologo" src="../../../resources/core/imagenes/isologo.png"></a>
+        <div>
+            <a href="/spring/miPerfil">Mi Perfil</a>
+            <a href="/spring/miPerfil">Notificaciones</a>
+            <a href="/spring/miPerfil">Mensajes</a>
+        </div>
+    </nav>
+</header>
+<main>
+    <aside class="aside">
+        <div class="container_profile">
+            <i class="material-icons">account_circle</i>
+            <h2 th:text= "${usuario.nombre}"></h2>
+            <ul>
+                <li th:text="${usuario.carrera != null ? usuario.carrera.nombre : 'Sin carrera'}">Carrera</li>
+            </ul>
+        </div>
+        <div class="user_info" >
+            <p>blablaba</p>
+            <p>blablaba</p>
+            <p>blablaba</p>
+            <a href="#" class="ver_mas">Conocer más...</a>
+        </div>
+        <div class="user_info_items" >
+            <ul>
+                <li> <i class="material-icons">archive</i>Archivos</li>
+                <li> <i class="material-icons">group</i>Grupos</li>
+            </ul>
+        </div>
+    </aside>
+    <section></section>
+</main>
 <script type="module" th:src="@{js/login.js}"></script>
 </body>
 </html>
