--- a/tallerwebi-base/src/main/webapp/resources/core/css/home.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/home.css
@@ -80,7 +80,8 @@ a:hover {
     flex-direction: column;
     gap: 1rem;
 }
-.box_comentario input{
+.box_comentario textarea{
+      font-family: "Inter", sans-serif;
       background-color: #2B2B2B;
       border: 1px solid #2B2B2B;
       border-radius: 0.4rem;
