--- a/tallerwebi-base/src/main/webapp/resources/core/css/login.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/login.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #121212;
+  background-color: #0F1317;
   font-family: "Inter", sans-serif;
   display: flex;
   flex-direction: column;
@@ -21,7 +21,7 @@ nav {
   width: 18rem;
 }
 .contenedor {
-  background-color: #1E1E1E;
+  background-color: #181D22;
   width: 360px;
   border-radius: 0.8rem;
   padding: 0 2.5rem 2rem;
@@ -47,8 +47,8 @@ form {
 }
 
 input {
-  background-color: #2B2B2B;
-  border: 1px solid #2B2B2B;
+  background-color: #1B2227;
+  border: 1px solid #1B2227;
   border-radius: 0.4rem;
   width: 100%;
   height: 45px;
