--- a/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-color: #121212;
+  background-color: #0F1317;
   font-family: "Inter", sans-serif;
   min-height: 100vh;
   margin: 0;
@@ -35,7 +35,7 @@ nav {
 }
 
 .contenedor {
-  background-color: #1E1E1E;
+  background-color: #181D22;
   width: 40rem;
   border-radius: 0.8rem;
   padding: 0 2.5rem 2rem;
@@ -69,8 +69,8 @@ form {
 }
 
 input {
-  background-color: #2B2B2B;
-  border: 1px solid #2B2B2B;
+  background-color: #1B2227;
+  border: 1px solid #1B2227;
   border-radius: 0.4rem;
   width: 100%;
   height: 2.8rem;
@@ -130,9 +130,9 @@ label {
 .carreras select {
   width: 100%;
   height: 2rem;
-  background-color: #2B2B2B;
+  background-color: #1B2227;
   color: #F5F5F5;
-  border: 1px solid #2B2B2B;
+  border: 1px solid #1B2227;
   border-radius: 0.3rem;
   padding: 0.3rem;
   appearance: none;
@@ -146,13 +146,13 @@ label {
 }
 
 .carreras select option {
-  background-color: #1E1E1E;
+  background-color: #181D22;
   color: #F5F5F5;
 }
 
 .carreras select option:hover {
   background-color: #27AE60;
-  color: #121212;
+  color: #0F1317;
 }
 
 @media (max-width: 1200px) {
