--- a/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
+++ b/tallerwebi-base/src/main/webapp/WEB-INF/views/thymeleaf/miPerfil.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Perfil</title>
-
     <link rel="stylesheet" th:href="@{/css/perfil.css}"/>
     <link rel="stylesheet" th:href="@{/css/home.css}"/>
     <!--<link rel="stylesheet" href="../../../resources/core/css/perfil.css"/>
@@ -22,6 +21,7 @@
             <a href="/spring/miPerfil">Mi Perfil</a>
             <a href="/spring/miPerfil">Notificaciones</a>
             <a href="/spring/miPerfil">Mensajes</a>
+            <a href="/spring/miPerfil">Cerrar sesión</a>
         </div>
     </nav>
 </header>
