--- a/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
+++ b/tallerwebi-base/src/main/webapp/resources/core/css/registrarse.css
@@ -28,7 +28,14 @@ nav {
   margin-top: 2rem;
   padding-left: 3rem;
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
 .logo {
   width: 18rem;
   height: auto;
